<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Payworks GmbH (http://www.payworks.com)
  ~
  ~ The MIT License (MIT)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<resources>
<string name="MPUAbort">"Abort"</string>
<string name="MPURetry">"Retry"</string>
<string name="MPUSendReceipt">"Send Receipt"</string>
<string name="MPUResendReceipt">"Resend Receipt"</string>
<string name="MPUClose">"Close"</string>
<string name="MPUApproved">"Approved"</string>
<string name="MPUInconclusive">"Inconclusive"</string>
<string name="MPURefunded">"Refunded"</string>
<string name="MPUDeclined">"Declined"</string>
<string name="MPUAborted">"Aborted"</string>
<string name="MPUPreauthorized">"Pre-Authorized"</string>
<string name="MPUPartiallyCaptured">"of Pre-Authorization for %1$s"</string>
<string name="MPUTotal">"Total"</string>
<string name="MPUSale">"Sale"</string>
<string name="MPURefund">"Refund"</string>
<string name="MPUUnknown">"Unknown"</string>
<string name="MPUTransactionTypeSale">"Sale"</string>
<string name="MPUTransactionTypeRefund">"Refund"</string>
<string name="MPUTransactionTypePreauthorization">"Pre-Authorization"</string>
<string name="MPUPaymentSuccessful">"Payment successful."</string>
<string name="MPURefundApproved">"Refund successful."</string>
<string name="MPURefundDeclined">"Refund declined."</string>
<string name="MPURefundAborted">"Refund aborted."</string>
<string name="MPURefundTransaction">"Refund Transaction"</string>
<string name="MPUCaptureTransaction">"Capture Transaction"</string>
<string name="MPUAbortTransaction">"Abort Transaction"</string>
<string name="MPURefundPrompt">"Are you sure that you want to refund this payment?"</string>
<string name="MPUCapturePrompt">"Are you sure that you want to capture this payment?"</string>
<string name="MPUSummary">"Summary"</string>
<string name="MPUInvalidEmailAddress">"Invalid email address"</string>
<string name="MPUEnterValidEmailAddress">"Please enter a valid email address."</string>
<string name="MPUOK">"OK"</string>
<string name="MPUCouldNotSendReceipt">"Cannot send receipt"</string>
<string name="MPUPleaseTryAgain">"Please try again."</string>
<string name="MPUSelectAccount">"Select account"</string>
<string name="MPUEnterEmailAddress">"Enter email address"</string>
<string name="MPUSend">"Send"</string>
<string name="MPUResend">"Resend"</string>
<string name="MPUContinue">"Continue"</string>
<string name="MPUBackButtonDisabled">"The back button is disabled during the checkout. Please use the buttons above."</string>
<string name="MPUSignatureStatusLine">"I agree to pay the amount of %1$s."</string>
<string name="MPUError">"Error"</string>
<string name="MPUReceiptSent">"Receipt sent."</string>
<string name="MPUFetching">"Fetching Transaction"</string>
<string name="MPULoading">"Loading..."</string>
<string name="MPUVersion">"Version"</string>
<string name="MPULoggedInAs">"Logged in as"</string>
<string name="MPULogout">"Logout"</string>
<string name="MPUHelp">"Help"</string>
<string name="MPUForgot">"Forgot password?"</string>
<string name="MPULogin">"Sign In"</string>
<string name="MPUEmail">"Email"</string>
<string name="MPUEmailAddress">"Email Address"</string>
<string name="MPUPassword">"Password"</string>
<string name="MPURequired">"required"</string>
<string name="MPUWrongCredentials">"You entered a wrong password or no account exists for your email address."</string>
<string name="MPUUnknownUsername">"No account exists for this email address."</string>
<string name="MPUBack">"Back"</string>
<string name="MPUPasswordReset">"We\'ve sent you an email. Please check it for further instructions."</string>
<string name="MPURequestPassword">"Reset Password"</string>
<string name="MPUActions">"Actions"</string>
<string name="MPUSettings">"Settings"</string>
<string name="MPUInfo">"Info"</string>
<string name="MPUVisa">"Visa"</string>
<string name="MPUMastercard">"Mastercard"</string>
<string name="MPUMaestro">"Maestro"</string>
<string name="MPUAmericanExpress">"American Express"</string>
<string name="MPUUnionPay">"UnionPay"</string>
<string name="MPUDiners">"Diners"</string>
<string name="MPUDiscover">"Discover"</string>
<string name="MPUGhLink">"Gh-Link"</string>
<string name="MPUJcb">"JCB"</string>
<string name="MPUPrinting">"Printing..."</string>
<string name="MPUReadCard">"Read Card"</string>
<string name="MPUPrintReceipt">"Print Receipt"</string>
<string name="MPUReprintReceipt">"Reprint Receipt"</string>
<string name="MPUCapture">"Capture"</string>
<string name="MPUCredit">"Credit"</string>
<string name="MPUDebit">"Debit"</string>
<string name="MPUPleaseSelect">"Please select"</string>
<string name="MPUClear">"Clear"</string>
</resources>