...
     </FrameLayout>

    <EditText
        android:padding="@dimen/dialog_content_padding"
        android:layout_marginLeft="@dimen/dialog_content_padding"
        android:layout_marginRight="@dimen/dialog_content_padding"
        android:id="@+id/email_address_view"
        android:inputType="textEmailAddress"
        android:hint="@string/MPUEnterEmailAddress"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/send_button"
        android:layout_below="@id/status_icon_view_container"/>

    <Button
        style="@style/mPOS.UI.NegativeButton"
        android:id="@id/send_button"
        android:layout_width="wrap_content"
...
