...
    android:background="@android:color/transparent"
    android:filterTouchesWhenObscured="true"
    android:paddingBottom="@dimen/mpu_activity_vertical_margin"
    android:paddingTop="@dimen/mpu_activity_vertical_margin">

    <Button
        android:id="@+id/mpu_continue_button"
        style="@style/mpos.ui.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/mpu_activity_horizontal_margin"
        android:layout_marginRight="@dimen/mpu_activity_horizontal_margin"
        android:enabled="false"
        android:text="@string/MPUContinue" />

    <io.mpos.ui.paybutton.view.SignatureView
        android:id="@+id/mpu_signature_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mpu_continue_button"
        android:layout_alignParentTop="true" />

    <TextView
...
