...
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mpu_summary_scheme_view"
                        style="@style/MpuCardBodyTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/mpu_issuer_card_icon_size"
                        android:gravity="center"
                        android:paddingBottom="@dimen/mpu_content_padding_small"
                        android:paddingLeft="@dimen/mpu_card_image_padding"
                        android:paddingRight="@dimen/mpu_card_image_padding"
                        android:paddingTop="@dimen/mpu_content_padding_small"
                        tools:drawableLeft="@drawable/mpu_visacard_image"
                        tools:text="Unknown" />

                    <TextView
                        android:id="@+id/mpu_summary_account_number_view"
                        style="@style/MpuAccountNoTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/mpu_content_padding_small"
                        android:paddingLeft="@dimen/mpu_content_padding"
...
